data/derived/comb/progs/unify/prog4581.ml.out
Characters 50-51:
  | (x,true) -> f x
                ^
Error: This expression has type 'a * bool
       This is not a function; it cannot be applied.
